tests/suite/fail/regression/fuzz/fuzz_half_struct.ny
struct S { x: i32 //~ ERROR
